analytics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: analytics-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: 191468900606.dkr.ecr.us-east-1.amazonaws.com/analytics-service
          ports:
            - containerPort: 8005
          resources:
            requests:
              cpu: "250m"      # Reserva 1/4 de um núcleo
              memory: "256Mi"  # Reserva 256MB de RAM
            limits:
              cpu: "500m"      # Pode usar até meio núcleo se precisar
              memory: "512Mi"  # Teto de 512MB para não travar o nó
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: analytics-namespace
spec:
  type: ClusterIP
  selector:
    app: analytics-service
  ports:
    - port: 8005
      targetPort: 8005
