evaluation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: evaluation-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      containers:
        - name: evaluation-service
          image: 191468900606.dkr.ecr.us-east-1.amazonaws.com/evaluation-service
          ports:
            - containerPort: 8004
          resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "400m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: evaluation-namespace
spec:
  type: ClusterIP
  selector:
    app: evaluation-service
  ports:
    - port: 8004
      targetPort: 8004
