flag-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: flag-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      containers:
        - name: flag-service
          image: 191468900606.dkr.ecr.us-east-1.amazonaws.com/flag-repo
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: flag-namespace
spec:
  type: ClusterIP
  selector:
    app: flag-service
  ports:
    - port: 8002
      targetPort: 8002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flag-service-ingress
  namespace: flag-namespace
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /flags
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  number: 8002
