targeting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: targeting-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      containers:
        - name: targeting-service
          image: 191468900606.dkr.ecr.us-east-1.amazonaws.com/targeting-service
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: targeting-namespace
spec:
  type: ClusterIP
  selector:
    app: targeting-service
  ports:
    - port: 8003
      targetPort: 8003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: targeting-service-ingress
  namespace: targeting-namespace
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /targeting
            pathType: Prefix
            backend:
              service:
                name: targeting-service
                port:
                  number: 8003
